--- a/tripify/template/index.html
+++ b/tripify/template/index.html
@@ -78,8 +78,8 @@
                     <div class="navbar-nav ml-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Home</a>
                         <a href="about.html" class="nav-item nav-link">About</a>
-                        <a href="login/" class="nav-item nav-link">Services</a>
-                        <a href="register/" class="nav-item nav-link">Tour Packages</a>
+                        <a href="login/" class="nav-item nav-link">Login</a>
+                        <a href="register/" class="nav-item nav-link">Register</a>
                         <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
                             <div class="dropdown-menu border-0 rounded-0 m-0">
@@ -278,7 +278,7 @@
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="destination-item position-relative overflow-hidden mb-2">
                         <img class="img-fluid" src={{i.img.url}} alt="">
-                        <a class="destination-overlay text-white text-decoration-none" href="">
+                        <a class="destination-overlay text-white text-decoration-none" href="product?id={{i.id}}">
                             <h5 class="text-white">{{i.name}}</h5>
                         </a>
                     </div>
