--- a/tripify/template/login.html
+++ b/tripify/template/login.html
@@ -11,7 +11,8 @@
     <center>
         <div style="background-color:rgba(255, 255, 255, 0.46);width:400px;height:300px;margin-top:100px;border-radius:10px">
             <h2 style="padding-top:20px">Login</h2>
-            <form action="loginsub"> 
+            <form action="loginsub" method="POST">
+                {% csrf_token %} 
             <input name="uname" type="text" placeholder="Username" required style="width:240px;height:30px;margin:10px;padding-left:10px;"><br>
             <input name="pword" type="password" placeholder="Password" required style="width:240px;height:30px;margin:10px;padding-left:10px;"><br><br>
             <button type="submit" style="width:250px;height:35px;background-color:#729449e1;border:none">Submit</button><br>
