--- a/tripify/template/single.html
+++ b/tripify/template/single.html
@@ -212,12 +212,11 @@
                     <div class="bg-white" style="padding: 30px; margin-bottom: 30px;">
                         <h4 class="text-uppercase mb-4" style="letter-spacing: 5px;">Comments</h4>
                         <div class="Message-Box">
-                            <p>Gaadha <b>Amazing service</b><small>06/03/2021</small></p>
-                            <p>Gaadha <b>Amazing service</b><small>06/03/2021</small></p>
-                            <p>Gaadha <b>Amazing service</b><small>06/03/2021</small></p>
-                            <p>Gaadha <b>Amazing service</b><small>06/03/2021</small></p>
-                            <p>Gaadha <b>Amazing service</b><small>06/03/2021</small></p>
-                        </div>
+                                                                                 
+                            {% for i in cmt %} 
+                            <p>{{i.name}}<b> {{i.cmt}}</b><small> {{i.date}}</small></p>
+                            {% endfor %}
+                        
                     
                         
                     </div>
@@ -226,17 +225,20 @@
                     <!-- Comment Form Start -->
                     <div class="bg-white mb-3" style="padding: 30px;">
                         <h4 class="text-uppercase mb-4" style="letter-spacing: 5px;">Leave a comment</h4>
-                        <form>
-                        
+                        <form action="{% url 'commentbox' %}">
+                        {% if user.is_authenticated %}
     
                             <div class="form-group">
                                 <label for="message">Message *</label>
-                                <textarea id="message" cols="30" rows="5" class="form-control"></textarea>
+                                <textarea id="message" cols="30" rows="5" class="form-control" name="msg"></textarea>
                             </div>
                             <div class="form-group mb-0">
                                 <input type="submit" value="Leave a comment"
                                     class="btn btn-primary font-weight-semi-bold py-2 px-3">
+                                    <input type="hidden" name="pro_id" value="{{pro.id}}">
+                                    <input typee="hidden" name="user" value="{{user.username}}"  
                             </div>
+                            {% endif %}
                         </form>
                     </div>
                     <!-- Comment Form End -->
